maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:21: error: not found: type int
def marque(inc:Int,pos:Array[int]){
                             ^ShortestPathMaze:22: error: not found: value xi
  xi = pos(0)
  ^ShortestPathMaze:23: error: not found: value yi
  yi = pos(1)
  ^ShortestPathMaze:24: error: not found: value xi
  for(x <- (xi-1) to (xi+1)){
            ^ShortestPathMaze:24: error: not found: value xi
  for(x <- (xi-1) to (xi+1)){
                      ^ShortestPathMaze:25: error: not found: value yi
    for(y <- yi-1 to yi+1){
             ^ShortestPathMaze:25: error: not found: value yi
    for(y <- yi-1 to yi+1){
                     ^ShortestPathMaze:27: error: not found: value xi
        if((!aMurNord(xi,yi)&&!aMurOuest(x,y))||(!aMurNord(xi-1,yi)&&!aMurOuest(xi-1,yi))){
                      ^ShortestPathMaze:27: error: not found: value yi
        if((!aMurNord(xi,yi)&&!aMurOuest(x,y))||(!aMurNord(xi-1,yi)&&!aMurOuest(xi-1,yi))){
                         ^ShortestPathMaze:27: error: not found: value xi
        if((!aMurNord(xi,yi)&&!aMurOuest(x,y))||(!aMurNord(xi-1,yi)&&!aMurOuest(xi-1,yi))){
                                                           ^ShortestPathMaze:27: error: not found: value yi
        if((!aMurNord(xi,yi)&&!aMurOuest(x,y))||(!aMurNord(xi-1,yi)&&!aMurOuest(xi-1,yi))){
                                                                ^ShortestPathMaze:27: error: not found: value xi
        if((!aMurNord(xi,yi)&&!aMurOuest(x,y))||(!aMurNord(xi-1,yi)&&!aMurOuest(xi-1,yi))){
                                                                                ^ShortestPathMaze:27: error: not found: value yi
        if((!aMurNord(xi,yi)&&!aMurOuest(x,y))||(!aMurNord(xi-1,yi)&&!aMurOuest(xi-1,yi))){
                                                                                     ^ShortestPathMaze:32: error: not found: value xi
        if(!aMurNord(xi,yi)){
                     ^ShortestPathMaze:32: error: not found: value yi
        if(!aMurNord(xi,yi)){
                        ^ShortestPathMaze:37: error: not found: value xi
        if((!aMurNord(xi,yi)&&!aMurOuest(xi,y))||(!aMurNord(xi+1,yi)&&!aMurOuest(xi,yi))){
                      ^ShortestPathMaze:37: error: not found: value yi
        if((!aMurNord(xi,yi)&&!aMurOuest(xi,y))||(!aMurNord(xi+1,yi)&&!aMurOuest(xi,yi))){
                         ^ShortestPathMaze:37: error: not found: value xi
        if((!aMurNord(xi,yi)&&!aMurOuest(xi,y))||(!aMurNord(xi+1,yi)&&!aMurOuest(xi,yi))){
                                         ^ShortestPathMaze:37: error: not found: value xi
        if((!aMurNord(xi,yi)&&!aMurOuest(xi,y))||(!aMurNord(xi+1,yi)&&!aMurOuest(xi,yi))){
                                                            ^ShortestPathMaze:37: error: not found: value yi
        if((!aMurNord(xi,yi)&&!aMurOuest(xi,y))||(!aMurNord(xi+1,yi)&&!aMurOuest(xi,yi))){
                                                                 ^ShortestPathMaze:37: error: not found: value xi
        if((!aMurNord(xi,yi)&&!aMurOuest(xi,y))||(!aMurNord(xi+1,yi)&&!aMurOuest(xi,yi))){
                                                                                 ^ShortestPathMaze:37: error: not found: value yi
        if((!aMurNord(xi,yi)&&!aMurOuest(xi,y))||(!aMurNord(xi+1,yi)&&!aMurOuest(xi,yi))){
                                                                                    ^ShortestPathMaze:47: error: not found: value xi
        if(!aMurOuest(xi,yi)){
                      ^ShortestPathMaze:47: error: not found: value yi
        if(!aMurOuest(xi,yi)){
                         ^ShortestPathMaze:52: error: value &&! is not a member of Boolean
        if((!aMurNord(x,y)&&!aMurOuest(x,yi))||(!aMurOuest(x,y)&&!aMurNord(xi,y))){
                          ^ShortestPathMaze:52: error: not found: value yi
        if((!aMurNord(x,y)&&!aMurOuest(x,yi))||(!aMurOuest(x,y)&&!aMurNord(xi,y))){
                                         ^ShortestPathMaze:52: error: value &&! is not a member of Boolean
        if((!aMurNord(x,y)&&!aMurOuest(x,yi))||(!aMurOuest(x,y)&&!aMurNord(xi,y))){
                                                               ^ShortestPathMaze:52: error: not found: value xi
        if((!aMurNord(x,y)&&!aMurOuest(x,yi))||(!aMurOuest(x,y)&&!aMurNord(xi,y))){
                                                                           ^ShortestPathMaze:62: error: value &&! is not a member of Boolean
        if((!aMurNord(x,y)&&!aMurOuest(xi,yi))||(!aMurOuest(x-1,y)&&!aMurNord(x-1,y))){
                          ^ShortestPathMaze:62: error: not found: value xi
        if((!aMurNord(x,y)&&!aMurOuest(xi,yi))||(!aMurOuest(x-1,y)&&!aMurNord(x-1,y))){
                                       ^ShortestPathMaze:62: error: not found: value yi
        if((!aMurNord(x,y)&&!aMurOuest(xi,yi))||(!aMurOuest(x-1,y)&&!aMurNord(x-1,y))){
                                          ^ShortestPathMaze:62: error: value &&! is not a member of Boolean
        if((!aMurNord(x,y)&&!aMurOuest(xi,yi))||(!aMurOuest(x-1,y)&&!aMurNord(x-1,y))){
                                                                  ^